crates/tests-legacy/src/snapshots/fe_compiler_tests_legacy__features__int_literal_coercion.snap
---
source: crates/tests-legacy/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
bar([]) used 310 gas

