crates/tests-legacy/src/snapshots/fe_compiler_tests_legacy__features__intrinsics.snap
---
source: crates/tests-legacy/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
add([Uint(10), Uint(100)]) used 221 gas
self_balance([]) used 208 gas
calldatasize([]) used 297 gas
calldatacopy([Uint(36), Uint(32)]) used 450 gas
callvalue([]) used 253 gas
basefee([]) used 429 gas
caller([]) used 231 gas

