crates/tests-legacy/src/snapshots/fe_compiler_tests_legacy__features__keccak.snap
---
source: crates/tests-legacy/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
return_hash_from_u256([Bytes([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1])]) used 506 gas
return_hash_from_u256([Bytes([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1])]) used 506 gas
return_hash_from_u8([Bytes([1])]) used 462 gas
return_hash_from_u8([Bytes([0])]) used 462 gas
return_hash_from_foo([Bytes([102, 111, 111])]) used 487 gas

