crates/tests-legacy/src/snapshots/fe_compiler_tests_legacy__features__map@u16_u16_map.fe.snap
---
source: crates/tests-legacy/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
write_bar([Uint(4), Uint(42)]) used 22474 gas
write_bar([Uint(26), Uint(12)]) used 22474 gas
read_bar([Uint(4)]) used 440 gas
read_bar([Uint(26)]) used 440 gas

