crates/tests-legacy/src/snapshots/fe_compiler_tests_legacy__features__map@u32_u32_map.fe.snap
---
source: crates/tests-legacy/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
write_bar([Uint(4), Uint(42)]) used 22470 gas
write_bar([Uint(26), Uint(12)]) used 22470 gas
read_bar([Uint(4)]) used 436 gas
read_bar([Uint(26)]) used 436 gas

