crates/tests-legacy/src/snapshots/fe_compiler_tests_legacy__features__map_tuple.snap
---
source: crates/tests-legacy/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
bar([Uint(1234)]) used 44423 gas

