crates/tests-legacy/src/snapshots/fe_compiler_tests_legacy__features__multi_param.snap
---
source: crates/tests-legacy/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
bar([Uint(4), Uint(42), Uint(420)]) used 961 gas

