crates/tests-legacy/src/snapshots/fe_compiler_tests_legacy__features__nested_map.snap
---
source: crates/tests-legacy/src/features.rs
expression: "format!(\"{}\", harness.gas_reporter)"
---
write_bar([Address(0x1000000000000000000000000000000000000001), Address(0x2000000000000000000000000000000000000002), Uint(12)]) used 22566 gas
write_bar([Address(0x1000000000000000000000000000000000000001), Address(0x3000000000000000000000000000000000000003), Uint(13)]) used 22566 gas
write_bar([Address(0x2000000000000000000000000000000000000002), Address(0x1000000000000000000000000000000000000001), Uint(21)]) used 22566 gas
write_baz([Address(0x1000000000000000000000000000000000000001), Uint(26), Bool(true)]) used 22609 gas
write_baz([Address(0x2000000000000000000000000000000000000002), Uint(42), Bool(true)]) used 22609 gas
write_baz([Address(0x2000000000000000000000000000000000000002), Uint(100), Bool(false)]) used 2709 gas
read_bar([Address(0x1000000000000000000000000000000000000001), Address(0x2000000000000000000000000000000000000002)]) used 588 gas
read_bar([Address(0x1000000000000000000000000000000000000001), Address(0x3000000000000000000000000000000000000003)]) used 588 gas
read_bar([Address(0x2000000000000000000000000000000000000002), Address(0x1000000000000000000000000000000000000001)]) used 588 gas
read_baz([Address(0x1000000000000000000000000000000000000001), Uint(26)]) used 626 gas
read_baz([Address(0x2000000000000000000000000000000000000002), Uint(42)]) used 626 gas
read_baz([Address(0x2000000000000000000000000000000000000002), Uint(100)]) used 626 gas

